Closed
Bug 622371
Opened 14 years ago
Closed 14 years ago
[Ckeditor] Images, smileys, flashes... always insert at beginning of editor (not at cursor)
Categories
(Core :: DOM: Editor, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b10
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: perfwill, Assigned: ehsan.akhgari)
References
(Blocks 1 open bug, )
Details
(Keywords: regression, Whiteboard: [hardblocker](?))
Attachments
(1 file)
|
3.32 KB,
patch
|
bzbarsky
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 5.1; rv:2.0b8) Gecko/20100101 Firefox/4.0b8
Build Identifier: Mozilla/5.0 (Windows NT 5.1; rv:2.0b8) Gecko/20100101 Firefox/4.0b8
In Google Chrome, the ckeditor works well. But in FireFox 4, images, smileys, flashes... always prepend to the beginning, it's very strange for a WYSIWYG editor. So I think it's firefox's bug.
Reproducible: Always
Steps to Reproduce:
1. Load http://ckeditor.com/demo
2. Click on the smiley button in the editor
3. Click on any smiley
Actual Results:
The smiley is always inserted to the beginning, no matter where the caret is!
Expected Results:
It should be inserted to the position of the caret.
Comment 1•14 years ago
|
||
Can confirm issue on latest nightly Mozilla/5.0 (Windows NT 5.1; rv:2.0b9pre) Gecko/20110101 Firefox/4.0b9pre ID:20110101030401. Works on 3.6.13. Found no relevant errors in error console
Reporter -> Did this work in beta 7?
Version: unspecified → Trunk
Oh, sorry, I can't answer it. I've just installed Firefox 4 for about a week, and I don't know about previous betas. May be, you can figure it out, I am too lazy to reinstall the Firefox with the previous beta.
Comment 3•14 years ago
|
||
Here is the regression window I got...
Regression Window:
Works 11/10/10 - Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101110 Firefox/4.0b8pre ID:20101110043309
Fails 11/11/10 - Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101111 Firefox/4.0b8pre ID:20101111042449
Pushlog
http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=+2010-11-10&enddate=2010-11-11
Assignee: nobody → general
Status: UNCONFIRMED → NEW
Component: General → JavaScript Engine
Ever confirmed: true
Product: Firefox → Core
QA Contact: general → general
Summary: Images, smileys, flashes... always prepend to the beginning → [Ckeditor] Images, smileys, flashes... always insert at beginning of editor (not at cursor)
Comment 4•14 years ago
|
||
This happens on ubuntu10.04 too.
Mozilla/5.0 (X11; Linux i686; rv:2.0b9pre) Gecko/20110101 Firefox/4.0b9pre ID:20110101030401
Regression window(cached hourly):
Works:
http://hg.mozilla.org/mozilla-central/rev/85b93f3ea9d1
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101109 Firefox/4.0b8pre ID:20101110130101
Fails:
http://hg.mozilla.org/mozilla-central/rev/6adc19c7a1e4
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b8pre) Gecko/20101109 Firefox/4.0b8pre ID:20101110132544
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=85b93f3ea9d1&tochange=6adc19c7a1e4
Candidate:
Bug 551704 - ContentEditable is inconsistently rendered
Assignee: general → nobody
Blocks: 551704
blocking2.0: --- → ?
Component: JavaScript Engine → Editor
Keywords: regression
OS: Windows XP → All
QA Contact: general → editor
Comment 5•14 years ago
|
||
In local; build:
build from 6adc19c7a1e4 : fails
build from e9d979b4b4a0 : fails
build from c922552a8dbc : fails
build from fa74947a7f20 : works
build from 2f2d382568a0 : works
build from 49a7555a77cc : works
build from 85b93f3ea9d1 : works
Candidate:
c922552a8dbc Ehsan Akhgari — Bug 551704 - Part 4: Set the selection to the beginning of the document when we're entering the design mode; r=bzbarsky a=blocking-betaN+
Assignee: nobody → ehsan
blocking2.0: ? → final+
| Assignee | ||
Comment 6•14 years ago
|
||
This is also caused by ckeditor setting designMode to "on" and "off"... We need to make sure that we set the selection to the beginning of the document only if we're going into the editable mode for the first time.
Attachment #501813 -
Flags: review?(bzbarsky)
| Assignee | ||
Updated•14 years ago
|
Whiteboard: [has patch][needs review bz]
Whiteboard: [has patch][needs review bz] → [has patch][needs review bz][hardblocker](?)
I find that ckeditor is always makes the first selected paragraph/block into whatever format is selected in the dropdown, regardless of what's selected. I've only noticed this with beta 8, wonder if this is the same bug.
| Assignee | ||
Comment 8•14 years ago
|
||
(In reply to comment #7)
> I find that ckeditor is always makes the first selected paragraph/block into
> whatever format is selected in the dropdown, regardless of what's selected.
> I've only noticed this with beta 8, wonder if this is the same bug.
Yes. It is the same bug, and it will be fixed by the patch that I have attached here.
Comment 9•14 years ago
|
||
Comment on attachment 501813 [details] [diff] [review]
Patch (v1)
r=me
Attachment #501813 -
Flags: review?(bzbarsky) → review+
| Assignee | ||
Updated•14 years ago
|
Whiteboard: [has patch][needs review bz][hardblocker](?) → [needs landing][hardblocker](?)
| Assignee | ||
Comment 10•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [needs landing][hardblocker](?) → [hardblocker](?)
Target Milestone: --- → mozilla2.0b10
You need to log in
before you can comment on or make changes to this bug.
Description
•