Bug 622371 - Only set the selection to the beginning of the editable document if the editor is being initialized by entering designMode; r=bzbarsky a=blocking-final+